# Job-Bored

./: .gitignore  README.md
app/: CMakeLists.txt  CmakePresets.json  readme.md
app/resources/: home.html  main.js
app/src/: MainWindow.cpp  MainWindow.h  SimpleApp.cpp  SimpleApp.h  main.cpp  simple_app.cpp  simple_handler.cpp  simple_handler.h
app/src/handlers/: SimpleHandler.cpp  SimpleHandler.h
app/src/resources/: app_icon.rc  resources.qrc
app/src/resources/homepage/: home.html
app/src/ui/: MainWindow.cpp
app/src/ui/atoms/: Icon.cpp  Icon.h  IconButton.cpp  IconButton.h  NavIcon.cpp  NavIcon.h
app/src/ui/molecules/: ControlButtons.cpp  ControlButtons.h  SidebarTab.cpp  SidebarTab.h  UrlBar.cpp  UrlBar.h
app/src/ui/organisms/: BottomBar.cpp  BottomBar.h  Sidebar.cpp  Sidebar.h
app/src/ui/organisms/dialogs/: SettingsDialog.cpp  SettingsDialog.h
app/src/ui/styles/: atoms.qss  colors.qss  global.qss  molecules.qss  organisms.qss
app/src/ui/styles/themes/: dark.qss  light.qss  theme.py
app/src/ui/templates/: MainWindow.cpp  MainWindow.h
old code/: MainWindow.cpp  MainWindow.h  main.cpp  simple_app.cpp  simple_app.h  simple_handler.cpp  simple_handler.h
